Message client/server working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,17 @@ set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_CXX_COMPILER g++) # needed for correct compilation (esp. debugging)
 set(CMAKE_CC_COMPILER gcc)
 
-# Client sources
+# Echo Client sources
 set(TCPEchoClientv4_SRC TCPEchoClientv4.cc)
 
-# Server sources
+# Echo Server sources
 set(TCPEchoServerv4_SRC TCPEchoServerv4.cc)
+
+# Msg Client sources
+set(TCPMsgClient_SRC TCPMsgClient.cc)
+
+# Msg Server sources
+set(TCPMsgServer_SRC TCPMsgServer.cc)
 
 # DieWithMessage library
 set(DieWithMessage_SRC DieWithMessage.cc)
@@ -19,10 +25,22 @@ add_library(DieWithMessage ${DieWithMessage_SRC})
 set(HandleTCPClient_SRC HandleTCPClient.cc)
 add_library(HandleTCPClient ${HandleTCPClient_SRC})
 
-# Build client and link to libraries
+# HandleMsg library
+set(HandleMsg_SRC HandleMsg.cc)
+add_library(HandleMsg ${HandleMsg_SRC})
+
+# Build echo client and link to libraries
 add_executable(TCPEchoClientv4 ${TCPEchoClientv4_SRC})
 target_link_libraries(TCPEchoClientv4 DieWithMessage)
 
-# Build server and link to libraries
+# Build echo server and link to libraries
 add_executable(TCPEchoServerv4 ${TCPEchoServerv4_SRC})
 target_link_libraries(TCPEchoServerv4 DieWithMessage HandleTCPClient)
+
+# Build msg client and link to libraries
+add_executable(TCPMsgClient ${TCPMsgClient_SRC})
+target_link_libraries(TCPMsgClient DieWithMessage)
+
+# Build msg client and link to libraries
+add_executable(TCPMsgServer ${TCPMsgServer_SRC})
+target_link_libraries(TCPMsgServer DieWithMessage HandleMsg)
